everything done except main grid

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,14 @@
-//
+$icon-font-path: "/fonts/glyphicons";
+$fa-font-path: "/fonts/font-awesome";
+
+@import "~bootstrap/scss/bootstrap";
+@import "~font-awesome/scss/font-awesome";
+@import "~select2/src/scss/core";
+
+body {
+    padding-top: 5rem;
+}
+.starter-template {
+    padding: 3rem 1.5rem;
+    text-align: center;
+}
